Settings to disable vanilla miners, prod research

--- a/locale/en/main.cfg
+++ b/locale/en/main.cfg
@@ -9,6 +9,10 @@ af-mining-drones-battery=Battery
 af-mining-drones-engine=Engine
 af-mining-drones-elengine=Electric engine
 
+af-mining-drones-no-burner-drill=Remove burner mining drill
+af-mining-drones-no-electric-drill=Remove electric mining drill
+af-mining-drones-no-drill-prod=Remove Mining Productivity research
+
 [mod-setting-description]
 af-mining-drones-gears=Add 5 Iron Gear Wheels to Mining Drone recipe
 af-mining-drones-sticks=Add 10 Iron Sticks to Mining Drone recipe
@@ -19,6 +23,9 @@ af-mining-drones-blue=Add a Processing Unit to Mining Drone recipe
 af-mining-drones-battery=Add a Battery to Mining Drone recipe
 af-mining-drones-engine=Add an Engine to Mining Drone recipe
 af-mining-drones-elengine=Add an Electric Engine to Mining Drone recipe
+
+af-mining-drones-no-electric-drill=It may be a problem for Space Exploration mod
+af-mining-drones-no-drill-prod=Note: the research is also used by pumpjacks
 
 [technology-name]
 mining-drone=Mining depot & drones
