--- a/locale/ru/main.cfg
+++ b/locale/ru/main.cfg
@@ -9,6 +9,10 @@ af-mining-drones-battery=Аккумулятор
 af-mining-drones-engine=Твердотопливный двигатель
 af-mining-drones-elengine=Электродвигатель
 
+af-mining-drones-no-burner-drill=Скрыть твёрдотопливный бур
+af-mining-drones-no-electric-drill=Скрыть электрический бур
+af-mining-drones-no-drill-prod=Скрыть исследование Продуктивность Добычи
+
 [mod-setting-description]
 af-mining-drones-gears=Добавить 5 Шестерней к рецепту Дрона-рудокопа
 af-mining-drones-sticks=Добавить 10 Железных Прутов к рецепту Дрона-рудокопа
@@ -20,8 +24,11 @@ af-mining-drones-battery=Добавить Аккумулятор к рецепт
 af-mining-drones-engine=Добавить Двигатель к рецепту Дрона-рудокопа
 af-mining-drones-elengine=Добавить Электродвигатель к рецепту Дрона-рудокопа
 
+af-mining-drones-no-electric-drill=Может быть проблемой для мода Space Exploration
+af-mining-drones-no-drill-prod=Учтите, исследование также используется насосными вышками
+
 [technology-name]
 mining-drone=Дроны-рудокопы
 
 [technology-description]
-mining-drone=Позволяет гораздо проще собирать руду
+mining-drone=Позволяет собирать руду гораздо проще
